[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Login.gd" type="Script" id=1]

[node name="Login" type="Node2D"]
script = ExtResource( 1 )

[node name="Url" type="LineEdit" parent="."]
margin_left = 385.613
margin_top = 106.99
margin_right = 601.613
margin_bottom = 146.99
text = "ws://localhost:8080"
placeholder_text = "Server URL"
caret_blink = true

[node name="Username" type="LineEdit" parent="."]
margin_left = 385.613
margin_top = 157.327
margin_right = 601.613
margin_bottom = 197.327
placeholder_text = "Username"
caret_blink = true

[node name="Button_Connect" type="Button" parent="."]
margin_left = 394.0
margin_top = 212.0
margin_right = 602.0
margin_bottom = 254.0
text = "Connect"

[node name="Button_Disconnect" type="Button" parent="."]
margin_left = 399.0
margin_top = 274.0
margin_right = 603.0
margin_bottom = 321.0
text = "Disconnect"
[connection signal="pressed" from="Button_Connect" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button_Disconnect" to="." method="_on_Button_Disconnect_pressed"]
